# C-Learning

./: 10_function_rand  10_function_time  11_array_2_passing  11_array_3_operations  12_pointers_2_operations  12_pointers_3_types  12_pointers_4_2DArray  12_pointers_5_function  13_string  13_string_2_operations  13_string_3_exercise1  13_string_3_exercise2  14_struct_1  14_struct_2_typedef  14_struct_3_nested  14_struct_4_nested_2  14_struct_5_exercise  15_struct_6_memoAlignment  16_union  17_DynamicMemoryAllocation_0  18_file_handling_1_input  18_file_handling_2_input  18_file_handling_2_input_fread  18_file_handling_2_output  18_file_handling_3_output  18_file_handling_4_output  1_hellow_world  2_printf  3_data_types  4_constant  5_operations  6_user_input  7_math_operations_1  7_math_operations_2  8_if_switch  9_loops  CMakeLists.txt  README.md
resources/: students.txt
src/: 10_function.c  10_function_rand.c  10_function_time.c  11_array_0.c  11_array_1_memory.c  11_array_2_passing.c  11_array_3_operations.c  11_array_4_algorithm.c  12_pointers_1_declare.c  12_pointers_2_operations.c  12_pointers_3_types.c  12_pointers_4_2DArray.c  12_pointers_5_function.c  12_pointers_syntax_summary.c  13_string_1_declare.c  13_string_2_operations.c  13_string_3_exercise1.c  13_string_3_exercise2.c  14_struct_1.c  14_struct_2_typedef.c  14_struct_3_nested.c  14_struct_4_nested_2.c  14_struct_5_exercise.c  15_struct_6_memoAlignment.c  16_union.c  16_union_2_union+struct.c  17_DynamicMemoryAllocation_0.c  18_file_handling_1_input.c  18_file_handling_2_input.c  1_hellow_world.c  (+11 more)
(+3 files in other folders)
